@@ -857,6 +857,7 @@ EXPORTS
 	KSI_VerificationRule_AggregationChainMetaDataVerification
 	KSI_VerificationRule_AggregationHashChainConsistency
 	KSI_VerificationRule_AggregationHashChainTimeConsistency
+	KSI_VerificationRule_AggregationHashChainIndexContinuation
 	KSI_VerificationRule_AggregationHashChainIndexConsistency
 	KSI_VerificationRule_CalendarHashChainInputHashVerification
 	KSI_VerificationRule_CalendarHashChainAggregationTime
